syntax = "proto3";

package example.article.v1;

import "google/protobuf/empty.proto";
import "example/article/v1/common.proto";

option go_package = "github.com/aplulu/modular-monolith-example-go/internal/grpc/example/article/v1;article";

// 記事サービス
service ArticleService {
  // ユーザを取得
  rpc ListArticle(google.protobuf.Empty) returns (ListArticleResponse);
}

message ListArticleResponse {
  repeated Article articles = 1;
}
